--- a/src/main/java/MainWindow.form
+++ b/src/main/java/MainWindow.form
@@ -3,7 +3,7 @@
   <grid id="cbd77" binding="contentPane" layout-manager="GridLayoutManager" row-count="2" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="364" y="54" width="344" height="431"/>
+      <xy x="364" y="54" width="344" height="437"/>
     </constraints>
     <properties/>
     <border type="etched"/>
@@ -21,7 +21,8 @@
               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties>
-              <text value="Поехали!"/>
+              <font name="Century Gothic" size="18" style="0"/>
+              <text value=""/>
             </properties>
           </component>
         </children>
@@ -67,7 +68,7 @@
           <grid id="928e4" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
-              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+              <grid row="1" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="1" use-parent-layout="false"/>
             </constraints>
             <properties>
               <font name="Century Gothic" size="18" style="1"/>
@@ -92,20 +93,22 @@
                   <text value=""/>
                 </properties>
               </component>
-              <component id="68f59" class="javax.swing.JLabel">
+              <component id="68f59" class="javax.swing.JLabel" binding="guessedCountryLabel">
                 <constraints>
                   <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <font name="Century Gothic" size="18" style="1"/>
+                  <text value=""/>
                 </properties>
               </component>
-              <component id="ea64d" class="javax.swing.JLabel">
+              <component id="ea64d" class="javax.swing.JLabel" binding="guessedCapitalLabel">
                 <constraints>
                   <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                 </constraints>
                 <properties>
-                  <text value="Label"/>
+                  <font name="Century Gothic" size="18" style="1"/>
+                  <text value=""/>
                 </properties>
               </component>
             </children>
